<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:orientation="vertical" 
  android:background="@drawable/sadtree">
  
  <TextView android:textColor="@color/title_color" android:text="@string/app_title"
  			android:textSize="20dip"
  			android:layout_gravity="center" 
  			android:layout_width="wrap_content"
  			android:layout_height="wrap_content"/> 
  			
  <TextView android:textColor="@color/version_color" android:text="@string/version"
  			android:textSize="10dip"
  			android:layout_gravity="center" 
  			android:layout_width="wrap_content"
  			android:layout_height="wrap_content"/> 
  			
  <TextView android:textColor="@color/credit_color" android:text="@string/credits"
  			android:textSize="10dip"
  			android:layout_gravity="center" 
  			android:layout_width="wrap_content"
  			android:layout_height="wrap_content"/> 
  			
  			
  <TextView android:id="@+id/status" 
  			android:textColor="@color/status_color" 
  			android:layout_gravity="center" 
  			android:text="Paused"
  			android:textSize="20dip" android:layout_weight="1.0" 
  			android:layout_width="wrap_content"
  			android:layout_height="fill_parent"/> 
  			  			
</LinearLayout>


